--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/ReminderListView.ui.xml
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/ReminderListView.ui.xml
@@ -8,6 +8,8 @@
        
   <g:HTMLPanel ui:field="wrapperPanel" addStyleNames="ui-homePanel ui-ExecutionListView">
     
+    <g:HTML HTML="Reminders" addStyleNames="ui-view-header"/>
+    
     <m:ScrollPanel ui:field="resultsPanel" addStyleNames="ui-results-panel"/>
     
   </g:HTMLPanel>
