--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/ContactListView.ui.xml
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/ContactListView.ui.xml
@@ -8,9 +8,13 @@
        
   <g:HTMLPanel ui:field="wrapperPanel" addStyleNames="ui-homePanel ui-TherapyListView">
     
+    <g:HTML HTML="Contacts" addStyleNames="ui-view-header"/>
+    
     <g:HorizontalPanel addStyleNames="ui-top-button-bar" spacing="0">
       <p:TouchButton text="New" ui:field="newBtn" addStyleNames="ui-top-action-btn"/>
+      <!-- 
       <p:TouchButton text="Delete" ui:field="deleteBtn" addStyleNames="ui-top-action-btn"/>
+       -->
     </g:HorizontalPanel>
     
     <m:ScrollPanel ui:field="resultsPanel" addStyleNames="ui-results-panel"/>
