--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/TherapyListView.ui.xml
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/TherapyListView.ui.xml
@@ -8,6 +8,8 @@
        
   <g:HTMLPanel ui:field="wrapperPanel" addStyleNames="ui-homePanel ui-TherapyListView">
     
+    <g:HTML HTML="Therapies" addStyleNames="ui-view-header"/>
+    
     <g:HorizontalPanel addStyleNames="ui-top-button-bar" spacing="0">
       <p:TouchButton text="New" ui:field="newBtn" addStyleNames="ui-top-action-btn"/>
       <p:TouchButton text="Delete" ui:field="deleteBtn" addStyleNames="ui-top-action-btn"/>
