--- a/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/TherapyEditView.ui.xml
+++ b/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/TherapyEditView.ui.xml
@@ -8,7 +8,7 @@
        
   <g:HTMLPanel ui:field="wrapperPanel" addStyleNames="ui-homePanel, ui-homePanel-clearHeight, ui-therapy-panel">
       
-    <g:HTML HTML="Nuova prescrizione" addStyleNames="ui-view-header"/>
+    <g:HTML HTML="Edit therapy" addStyleNames="ui-view-header"/>
     
     <g:HorizontalPanel addStyleNames="ui-top-button-bar" spacing="0">
       <p:TouchButton text="Save" ui:field="saveBtn" addStyleNames="ui-top-action-btn"/>
