--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/AboutView.ui.xml
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/AboutView.ui.xml
@@ -8,12 +8,21 @@
        
   <g:HTMLPanel ui:field="wrapperPanel" addStyleNames="ui-homePanel, ui-legal-notes-panel">
 
-    <p style="width:100%">
-      <h1>Legal notes</h1>
-    </p>      
+    <div class="ui-about-header">
+      <h1><g:Label ui:field="header1Label"/></h1>
+      <h5><g:Label ui:field="header2Label"/></h5>
+    </div>   
+    
+    <gc:Spacer height="2em"/>   
 
     <p>
-      This app includes some images created by <a href="http://www.aha-soft.com/">Aha-Soft</a>
+      Therapy Reminder is an innovative application that allows you to have under control every drugs prescription.
+    </p>      
+
+    <gc:Spacer height="2em"/>   
+
+    <p>
+      This app includes some free images created by <a href="http://www.aha-soft.com/">Aha-Soft</a>
     </p>      
 
   </g:HTMLPanel>
