--- a/phgcommons/src/main/java/it/mate/phgcommons/client/ui/theme/css/phg.css
+++ b/phgcommons/src/main/java/it/mate/phgcommons/client/ui/theme/css/phg.css
@@ -192,6 +192,18 @@
   margin-left: 4px;
 }
 
+.phg-TimePickerDialog-AMPM {
+  border: 1px solid #bababa;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #f4f4f4), color-stop(1, #d4d4d4));
+  border-radius: 3px;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 1em;
+  padding: 0.8em 0.3em;
+  font-weight: bold;
+  margin-top: 0.6em;
+}
+
 .phg-PopinDialog-Wrapper {
   background: transparent;
 }
