--- a/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/ContactEditView.ui.xml
+++ b/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/ContactEditView.ui.xml
@@ -8,7 +8,9 @@
        
   <g:HTMLPanel ui:field="wrapperPanel" addStyleNames="ui-homePanel, ui-homePanel-clearHeight, ui-account-panel">
       
-    <g:HTML HTML="Edit contact" addStyleNames="ui-view-header"/>
+    <g:HTML HTML="Edit contact" addStyleNames="ui-view-header">
+      <ui:attribute name="HTML" description="text" key="header.html"/>
+    </g:HTML>
     
     <g:HorizontalPanel addStyleNames="ui-top-button-bar" spacing="0">
       <p:TouchButton text="Save" ui:field="saveBtn" addStyleNames="ui-top-action-btn">
