--- a/trunk/therapyreminder/android/res/xml/config.xml
+++ b/trunk/therapyreminder/android/res/xml/config.xml
@@ -12,6 +12,12 @@
   <feature name="InAppBrowser">
       <param name="android-package" value="org.apache.cordova.inappbrowser.InAppBrowser" />
   </feature>
+  <feature name="Globalization">
+      <param name="android-package" value="org.apache.cordova.globalization.Globalization" />
+  </feature>
+  <feature name="LocalNotification">
+      <param name="android-package" value="de.appplant.cordova.plugin.localnotification.LocalNotification" />
+  </feature>
   <name>TherapyReminder</name>
   <description>
       A sample Apache Cordova application that responds to the deviceready event.
