--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/SettingsView.ui.xml
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/SettingsView.ui.xml
@@ -40,6 +40,12 @@
     </g:HorizontalPanel>
     
     <hr class="ui-settings-separator"/>
+    <g:HorizontalPanel addStyleNames="ui-setting-row">
+      <g:HTML HTML="Insert reminder in user calendar:" addStyleNames="ui-settings-label ui-app-online-mode-label"/>
+      <ph:PhCheckBox addStyleNames="ui-app-online-mode-ckb" ui:field="cbxUserCalendar"/>
+    </g:HorizontalPanel>
+    
+    <hr class="ui-settings-separator"/>
     <g:HTMLPanel>
       <gc:Spacer height="0.5em"/>
       <p:TouchHTML text="About" addStyleNames="ui-settings-label ui-app-legal-notes-label" ui:field="aboutBtn"/>
